# Atlas-MAG_OmegaRule

./: .gitignore  BRANCH_SCOPE.md  CLAUDE.md  LESSONS_LEARNED.md  PRD_Atlas_MAG_TNT.md  README.md  pyproject.toml
analysis/: README.md  __init__.py  cli.py
analysis/checkpoints/: __init__.py  batch_analyzer.py  gate_evolution.py  memory_evolution.py
analysis/comparisons/: __init__.py  run_comparator.py
analysis/parsers/: __init__.py  log_parser.py
analysis/visualizations/: __init__.py  training_curves.py
data/: tokenizer_smollm.json
docs/: ATLAS_MAG_IMPLEMENTATION_SUMMARY.md  MEMORY_FIX_DESIGN.md  PHASE1_DECISIONS.md  PHASE2_DECISIONS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_DECISIONS.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE4_DECISIONS.md  TITANS_MAG_SUMMARY.md  TNT_TRAINING_FRAMEWORK_SUMMARY.md
scripts/: analyze_checkpoint.py  analyze_checkpoints.py  eval_worker.py  quick_inference.py  run_phase0.py  run_phase1.py  run_phase2.py  run_phase3.py  train.py  train_smollm.py  train_tokenizer_smollm.py
scripts_clean/: eval_worker.py  quick_inference.py  train.py
src/: __init__.py  config.py
src/data/: __init__.py  calibration.py  smollm_dataset.py  tokenizer.py
src/inference/: __init__.py  engine.py  generator.py
src/initialization/: __init__.py  hash_verify.py  w_init.py
src/model/: __init__.py  atlas_memory.py  blocks.py  persistent_memory.py  projections.py  qk_projection.py  (+1 more)
tests/: __init__.py  test_nn_blocks.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_smollm_dataset.py  test_smollm_tokenizer.py  test_ttl.py
(+39 files in other folders)
