[project]
name = "atlas-mag-tnt"
version = "0.1.0"
description = "Atlas-MAG + TNT: Hybrid sequence model with neural long-term memory"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "datasets",       # WikiText-2 loading
    "tokenizers",     # Custom BPE training
    "tqdm",           # Progress bars
    "zstandard (>=0.25.0,<0.26.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pyarrow>=14.0.0",  # Parquet file reading for SmolLM
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^6.0.0"
mypy = "^1.19.1"
ruff = "^0.9.0"

